// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`resizer renders 0 1`] = `
Array [
  .c0 {
  resizer: 0;
}

<div
    className="c0"
  />,
  .c0 {
  resizer: 0;
}

<div
    className="c0"
  />,
  .c0 {
  resizer: 0;
}

<div
    className="c0"
  />,
  .c0 {
  resizer: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`resizer renders function 1`] = `
Array [
  .c0 {
  resizer: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  resizer: has;
}

<div
    className="c0"
  />,
  .c0 {
  resizer: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  resizer: has;
}

<div
    className="c0"
  />,
]
`;

exports[`resizer renders invalid theme path 1`] = `
Array [
  .c0 {
  resizer: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  resizer: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  resizer: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  resizer: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`resizer renders negative number 1`] = `
Array [
  .c0 {
  resizer: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  resizer: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  resizer: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  resizer: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`resizer renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    resizer: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    resizer: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    resizer: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    resizer: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    resizer: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    resizer: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    resizer: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    resizer: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    resizer: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    resizer: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    resizer: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    resizer: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    resizer: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    resizer: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    resizer: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    resizer: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`resizer renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    resizer: July;
  }
}

@media April {
  .c0 {
    resizer: August;
  }
}

@media January {
  .c0 {
    resizer: September;
  }
}

@media April {
  .c0 {
    resizer: November;
  }
}

@media June {
  .c0 {
    resizer: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    resizer: July;
  }
}

@media April {
  .c0 {
    resizer: August;
  }
}

@media January {
  .c0 {
    resizer: September;
  }
}

@media April {
  .c0 {
    resizer: November;
  }
}

@media June {
  .c0 {
    resizer: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    resizer: January;
  }
}

@media April {
  .c0 {
    resizer: December;
  }
}

@media January {
  .c0 {
    resizer: April;
  }
}

@media April {
  .c0 {
    resizer: May;
  }
}

@media June {
  .c0 {
    resizer: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    resizer: January;
  }
}

@media April {
  .c0 {
    resizer: December;
  }
}

@media January {
  .c0 {
    resizer: April;
  }
}

@media April {
  .c0 {
    resizer: May;
  }
}

@media June {
  .c0 {
    resizer: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`resizer renders postitive number 1`] = `
Array [
  .c0 {
  resizer: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  resizer: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  resizer: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  resizer: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`resizer renders string 1`] = `
Array [
  .c0 {
  resizer: July;
}

<div
    className="c0"
  />,
  .c0 {
  resizer: July;
}

<div
    className="c0"
  />,
  .c0 {
  resizer: June;
}

<div
    className="c0"
  />,
  .c0 {
  resizer: June;
}

<div
    className="c0"
  />,
]
`;

exports[`resizer renders valid theme path 1`] = `
Array [
  .c0 {
  resizer: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  resizer: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  resizer: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  resizer: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
